K8S/LoadBalancer/minio-ingrss.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - bucket.ticketshappy.com
    secretName: minio-bucket-tls
  rules:
  - host: bucket.ticketshappy.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-prod
            port:
              number: 9001
