K8S/LoadBalancer/nginx_metrics.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-metrics-ingress
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: ticketshappy.com
      http:
        paths:
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: ingress-nginx-metrics
                port:
                  number: 10254
